# jellyfin2txt

./: .dockerignore  Dockerfile  README.md  app.py  config.py  config.toml  docker-compose.yml  key.py  media.py  pyproject.toml  requirements.txt  subtitle.py
.github/workflows/: docker-hub.yml
jellyfin2txt/: app.py  config.py  key.py  media.py  subtitle.py  utils.py
