[tool.poetry]
name = "jellyfin2txt"
version = "0.1.0"
description = "Simple API for NeosVr for getting movies and series from a jellyfin server."
authors = ["brodokk <brodokk@brodokk.space>"]
license = "GPLv3.0"

[tool.poetry.dependencies]
python = "~3.11"
Flask = "^2.1.1"
jellyfin-apiclient-python = {git = "https://github.com/jellyfin/jellyfin-apiclient-python", rev = "3442ef57d5f8d60dc7a7419d44ce0f4d2f26337f"}
tabulate = "^0.8.9"
toml = "^0.10.2"
cleanit = "^0.4.5"
pyasstosrt = "^1.3.1"
sh = "^1.14.3"
psutil = "^5.9.4"
pgsrip = "^0.1.2"
subliminal = "^2.1.0"

[tool.poetry.scripts]
jellyfin2txt = "jellyfin2txt.app:main"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.0.2"
sphinx-autoapi = "^3.2.1"
sphinxcontrib-httpdomain = "^1.8.1"
furo = "^2024.8.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
